# butler

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
DESIGN/: README.md
DESIGN/admin-linear/: report.ko.html
PRD/: 01_PRD.md  02_DATA_MODEL.md  03_PHASES.md  04_PROJECT_SPEC.md  README.md
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/goal-phase1/: PLAN.md  PROGRESS.md  RECOVERY.md  VALIDATION.md  goal-command.md
docs/goal-phase2_3/: PLAN.md  PROGRESS.md  RECOVERY.md  VALIDATION.md  goal-command.md
services/ai-python/: Dockerfile  pyproject.toml
services/ai-python/butler_ai/: __init__.py  config.py  main.py
services/ai-python/butler_ai/chatbot/: __init__.py  engine.py  models.py  routes.py
services/ai-python/butler_ai/etl/: __init__.py  adapters.py  ami.py  cache.py  models.py  routes.py  service.py
services/ai-python/butler_ai/ocr/: __init__.py  engine.py  models.py  routes.py
services/ai-python/butler_ai/precedents/: __init__.py  engine.py  models.py  routes.py
services/ai-python/butler_ai/reports/: __init__.py  defect_ai.py  models.py  pdf.py  routes.py  storage.py
services/ai-python/butler_ai/settlement/: __init__.py  models.py  routes.py  rules.py
services/ai-python/tests/: test_cache.py  test_chatbot.py  test_etl.py  test_health.py  test_ocr.py  test_precedents.py  test_reports.py  test_settlement.py
services/api-node/: Dockerfile  package.json  vitest.config.ts
(+149 files in other folders)
